
------------------------------------------------------------------------
r377 | gaser | 2010-12-20 16:02:09

M       cg_vbm8_tools.m
M       cg_slice_overlay_ui.m
M       cg_spmT2x.m

(1) Corrected error in cg_spmT2x.m, where sometimes extent thresholds were
    ignored.
(2) Added some options to cg_slice_overlay_ui.m.
------------------------------------------------------------------------
r378 | gaser | 2010-12-23 22:58:55

M       cg_vbm8_batch.m
M       cg_vbm8_longitudinal_multi_run.m

(1) Disabled warning for processing of longitudinal data.
(2) Corrected typo in cg_vbm8_batch.m.
------------------------------------------------------------------------
r379 | gaser | 2010-12-24 00:54:35

Bias correction in longitudinal processing pipeline is disabled if FWHM=0 or
FWHM=Inf.
------------------------------------------------------------------------
r380 | gaser | 2010-12-29 02:01:45

M       cg_vbm8_bias_run.m

Bias correction in longitudinal processing pipeline is disabled if FWHM=0 or
FWHM=Inf.
------------------------------------------------------------------------
r381 | gaser | 2010-12-29 02:10:12

M       cg_vbm8_bias_run.m

Bias correction in longitudinal processing pipeline is disabled if FWHM=0 or
FWHM=Inf.
------------------------------------------------------------------------
r382 | gaser | 2010-12-29 02:12:24

M       cg_vbm8_tools.m
A       cg_vbm8_halfway_run.m
A       cg_vbm8_halfway.m

Added batch for halfway registration correction.
------------------------------------------------------------------------
r383 | gaser | 2011-01-04 01:52:10

M       cg_vbm8_defaults.m
A       cg_run_realign_estwrite.m
M       cg_vbm8_tools.m
A       cg_realign.m
A       cg_run_realign_estimate.m
A       cg_cfg_realign.m
D       cg_vbm8_halfway_run.m
D       cg_vbm8_halfway.m

Implemented halfway registration based on a modified version of spm_realign.m.
------------------------------------------------------------------------
r384 | gaser | 2011-01-05 01:35:30